--- a/index.html
+++ b/index.html
@@ -99,5 +99,8 @@
             <span class="fw-demibold">"Is This the World We Created...?"</span>
         </li>
     </ol>
+    <p class="text-body2" style="text-align: right;">
+        <br><br>Gefro © - 2025
+    </p>
 </body>
 </html>
