--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The Works - LP Store</title>
     <link rel="stylesheet" href="css/RodinPro.css">
     <link rel="stylesheet" href="css/text.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body class="RodinPro" style="text-align: justify; margin: 40px; margin-top: 25px;">
     <h1 class="text-title1" style="text-align: center; margin-bottom:0px;">
@@ -13,8 +14,8 @@
     </h1>
     <hr style="height:2px;border:none;color:#333;background-color:#333"> 
     <br>
-    <div style="text-align: center">
-        <img src="https://a5.mzstatic.com/us/r1000/0/Music126/v4/b7/fe/49/b7fe491a-974c-d792-c430-f80ac605b423/14DMGIM05556.rgb.jpg" alt="Cáratula del álbum 'The Works' - Queen (1984)" width="300" title="The Works - Queen (1984)">
+    <div style="text-align: center; margin: 0px">
+        <img src="https://a5.mzstatic.com/us/r1000/0/Music126/v4/b7/fe/49/b7fe491a-974c-d792-c430-f80ac605b423/14DMGIM05556.rgb.jpg" alt="Cáratula del álbum 'The Works' - Queen (1984)" width="300" title="The Works - Queen (1984)" class="img-responsive">
     </div>
     <p class="text-body">
         <span class="fw-demibold">The Works</span> es el décimo segundo álbum de estudio de la banda británica Queen, lanzado el 27 de febrero de 1984 a través de la discográfica EMI en el Reino Unido y Capitol Records en los Estados Unidos. El álbum es conocido por su estilo más accesible y comercial, con una clara inclinación hacia el rock clásico y el pop, en contraste con el sonido experimental de sus trabajos anteriores. The Works fue grabado entre finales de 1983 y principios de 1984 en los estudios Mountain en Montreux, Suiza, y fue producido por Queen y Mack. <br>
