--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
     <hr style="height:2px;border:none;color:#333;background-color:#333"> 
     <br>
-    <div style="text-align: center; margin: 0px">
+    <div style="text-align: center">
         <img src="https://a5.mzstatic.com/us/r1000/0/Music126/v4/b7/fe/49/b7fe491a-974c-d792-c430-f80ac605b423/14DMGIM05556.rgb.jpg" alt="Cáratula del álbum 'The Works' - Queen (1984)" width="300" title="The Works - Queen (1984)" class="img-responsive">
     </div>
     <p class="text-body">
