--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Works - LP Store</title>
+    <title>The Works</title>
     <link rel="stylesheet" href="css/RodinPro.css">
     <link rel="stylesheet" href="css/text.css">
     <link rel="stylesheet" href="css/media.css">
@@ -73,31 +73,40 @@
     </h3>
     <ol>
         <li>
-            <span class="fw-demibold">"Radio Ga Ga"</span>
+            <span class="fw-demibold">"Radio Ga Ga"</span> <br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/1nQRg9q9uwALGzouOX5OyQ?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"Tear It Up"</span>
+            <span class="fw-demibold">"Tear It Up"</span> <br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/5pNxycmDYd8wSlSO5y47ai?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"It's a Hard Life"</span><span class="fw-demibold">
+            <span class="fw-demibold">"It's a Hard Life"</span><br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/34MoKBRdC9JDjcL4b4X1Ic?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"Man on the Prowl"</span>
+            <span class="fw-demibold">"Man on the Prowl"</span><br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/6ZUUTe35o5Q1autiNyj9MW?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"Machines (or 'Back to Humans')"</span>
+            <span class="fw-demibold">"Machines (or 'Back to Humans')"</span> <br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/0hSSAkmhJWealZ3PABqJmX?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"I Want to Break Free"</span>
+            <span class="fw-demibold">"I Want to Break Free"</span> <br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/1MsBRSbt5dqJSw3RxXtvCM?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"Keep Passing the Open Windows"</span>
+            <span class="fw-demibold">"Keep Passing the Open Windows"</span> <br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/4cKnOBKniYNOEaSd9O41Pk?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"Hammer to Fall"</span>
+            <span class="fw-demibold">"Hammer to Fall"</span> <br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/7Im5F8fliiF16D2te5rYNv?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
         <li>
-            <span class="fw-demibold">"Is This the World We Created...?"</span>
+            <span class="fw-demibold">"Is This the World We Created...?"</span> <br>
+            <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/78BjB6GC1JPt4LgA8O0sys?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </li>
     </ol>
     <p class="text-body2" style="text-align: right;">
