Spaced List fix

--- a/index.html
+++ b/index.html
@@ -39,21 +39,18 @@
         Canciones destacadas
     </h2>
     <hr style="height:1px;border:none;color:#333;background-color:#333;margin-top: 3px;">
-    <ul>
+    <ul class="spaced-list">
         <li>
             <span class="fw-demibold">"Radio Ga Ga"</span>: Una de las canciones más emblemáticas de Queen, escrita por el baterista Roger Taylor, que se convirtió en un éxito mundial. Su mensaje sobre el poder de la radio y el cambio en la industria musical la convirtió en una de las composiciones más representativas del álbum.
         </li>
-        <br>
         <li>
             <span>
                 <span class="fw-demibold">"I Want to Break Free"</span>: Escrita por John Deacon, esta canción es conocida por su estribillo pegajoso y su mensaje de lucha por la libertad personal. El videoclip, en el que la banda se presenta disfrazada de mujeres en un hogar suburbano, generó controversia pero se convirtió en un símbolo de la época.<br>
             </span>
         </li>
-        <br>
         <li>
             <span class="fw-demibold">"Hammer to Fall"</span>: Una de las composiciones más duras y directas de la banda en términos de sonido, con letras que abordaban temas de guerra y lucha.
         </li>
-        <br>
         <li>
             <span class="fw-demibold">"Tear It Up"</span>: Una canción de ritmo rápido con un estilo más duro, que destaca por su energía y su enfoque directo.
         </li>
@@ -71,7 +68,7 @@
     <h3 class="text-title3" style="margin-bottom:0px">
         Lista de canciones
     </h3>
-    <ol>
+    <ol class="spaced-list">
         <li>
             <span class="fw-demibold">"Radio Ga Ga"</span> <br>
             <iframe class="spotify-responsive" style="border-radius:12px" src="https://open.spotify.com/embed/track/1nQRg9q9uwALGzouOX5OyQ?utm_source=generator" width="25%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
