--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="https://a5.mzstatic.com/us/r1000/0/Music126/v4/b7/fe/49/b7fe491a-974c-d792-c430-f80ac605b423/14DMGIM05556.rgb.jpg" alt="Cáratula del álbum 'The Works' - Queen (1984)" width="300" title="The Works - Queen (1984)" class="img-responsive" style="border-radius: 16px;">
     </div>
     <p class="text-body">
-        <span class="fw-demibold">UNT</span> es el décimo segundo álbum de estudio de la banda británica Queen, lanzado el 27 de febrero de 1984 a través de la discográfica EMI en el Reino Unido y Capitol Records en los Estados Unidos. El álbum es conocido por su estilo más accesible y comercial, con una clara inclinación hacia el rock clásico y el pop, en contraste con el sonido experimental de sus trabajos anteriores. The Works fue grabado entre finales de 1983 y principios de 1984 en los estudios Mountain en Montreux, Suiza, y fue producido por Queen y Mack. <br>  
+        <span class="fw-demibold">The Works</span> es el décimo segundo álbum de estudio de la banda británica Queen, lanzado el 27 de febrero de 1984 a través de la discográfica EMI en el Reino Unido y Capitol Records en los Estados Unidos. El álbum es conocido por su estilo más accesible y comercial, con una clara inclinación hacia el rock clásico y el pop, en contraste con el sonido experimental de sus trabajos anteriores. The Works fue grabado entre finales de 1983 y principios de 1984 en los estudios Mountain en Montreux, Suiza, y fue producido por Queen y Mack. <br>  
     </p>
     <h2 class="text-title2" style="margin-bottom:0px">
             Contexto y producción
